--- a/marketplace-monolith/src/main/resources/application.yaml
+++ b/marketplace-monolith/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     name: marketplace-monolith
   data:
     mongodb:
-      uri: mongodb://host.docker.internal:27017/marketplace
+      uri: mongodb://mongo:27017/marketplace
       database: marketplace
 
 server:
