--- a/marketplace-monolith/src/main/resources/application.yaml
+++ b/marketplace-monolith/src/main/resources/application.yaml
@@ -1,10 +1,15 @@
 spring:
   application:
     name: marketplace-monolith
-  data:
-    mongodb:
-      uri: mongodb://mongo:27017/marketplace
-      database: marketplace
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+
+  liquibase:
+    change-log: classpath:/db/changelog/changelog-master.yaml
+    enabled: true
 
 server:
   servlet:
