--- a/marketplace-monolith/src/main/resources/db/changelog/changes/01-create-users-table.yaml
+++ b/marketplace-monolith/src/main/resources/db/changelog/changes/01-create-users-table.yaml
@@ -2,6 +2,11 @@ databaseChangeLog:
   - changeSet:
       id: 01-create-users-table
       author: kuber4s
+      preConditions:
+        - onFail: MARK_RAN
+        - not:
+            - tableExists:
+                tableName: users
       changes:
         - createTable:
             tableName: users
